crates/next-custom-transforms/tests/errors/next-font-loaders/spread-arg/input.js
import { Inter } from '@next/font/google'

const a = fn(...{}, ...[])
const inter = Inter(...{}, ...[])
